--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,6 @@ body {
   align-items: center;
   border-bottom: 1px solid black;
 }
-
-
  
 .footer {
   height: 50px;
@@ -19,4 +17,8 @@ body {
   justify-content: center;
   align-items: center;
   border-top: 1px solid black;
+}
+ 
+.content {
+  min-height: calc(100vh - 100px);
 }
