--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
-
+ 
 .header {
   height: 49px;
   display: flex;
@@ -30,6 +30,12 @@ body {
 .section {
   height: 450px;
   width: 100%;
+}
+ 
+.section {
+  height: 450px;
+  width: 100%;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
